--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.302.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.3.0",
+    "request": "^2.88.0",
     "typed-promisify": "^0.4.0",
     "uuid": "^3.3.2"
   },
@@ -19,6 +20,7 @@
     "@types/bcryptjs": "^2.4.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^8.10.28",
+    "@types/request": "^2.47.1",
     "@types/uuid": "^3.4.4",
     "add-asset-webpack-plugin": "^0.1.0",
     "serverless-offline": "^3.25.9",
