--- a/serverless.yml
+++ b/serverless.yml
@@ -1,27 +1,22 @@
 service:
-  name: eventSourceSystem
+  name: wishListSharer
 
 plugins:
   - serverless-webpack
   - serverless-offline
 
-package:
-  include:
-    - key.public
-  exclude:
-    - secrets.*.yml
-
 provider:
   name: aws
   runtime: nodejs8.10
   timeout: 10
-  memorySize: 128
+  region: us-west-2
+  memorySize: 256
   environment: 
     IOPIPE_TOKEN: ${env:IOPIPE_TOKEN}
     IOPIPE_TRACE_AUTO_HTTP_ENABLED: true
     CAPTCHA_SECRET: ${env:CAPTCHA_SECRET}
     MAILGUN_API_KEY: ${env:MAILGUN_API_KEY}
-    AWS_REGION: ${opt:region, 'us-east-1'}
+    #AWS_REGION: ${opt:region, 'us-west-2'}
     AWS_ACCOUNT_ID: ${env:AWS_ACCOUNT_ID}
   iamRoleStatements:
     -  Effect: "Allow"
@@ -362,8 +357,8 @@ resources:  # CloudFormation template syntax
           - AttributeName: event_id
             KeyType: HASH
         ProvisionedThroughput:
-          ReadCapacityUnits: 10
-          WriteCapacityUnits: 5
+          ReadCapacityUnits: 15
+          WriteCapacityUnits: 15
         StreamSpecification:
           StreamViewType: NEW_IMAGE
     userTable:
@@ -377,8 +372,8 @@ resources:  # CloudFormation template syntax
           - AttributeName: user_name
             KeyType: HASH
         ProvisionedThroughput:
-          ReadCapacityUnits: 5
-          WriteCapacityUnits: 5
+          ReadCapacityUnits: 10
+          WriteCapacityUnits: 10
     eventTopic:
       Type: "AWS::SNS::Topic"
       Properties:
