--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ branches:
 before_script:
   - npm install
   - npm install -g serverless
+  - pip install --user awscli
+  - ./retrieve-keys.sh
 
 script:
   - echo 'hello'
