--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@iopipe/iopipe": "^1.10.0",
+    "@thundra/core": "^2.5.10",
     "aws-sdk": "^2.302.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.3.0",
@@ -17,20 +17,20 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
-    "@types/bcryptjs": "^2.4.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/node": "^8.10.28",
-    "@types/request": "^2.47.1",
-    "@types/uuid": "^3.4.4",
+    "@types/node": "^8.10.53",
+    "@types/request": "^2.48.2",
+    "@types/uuid": "^3.4.5",
     "add-asset-webpack-plugin": "^0.1.0",
-    "serverless-offline": "^3.25.9",
-    "serverless-offline-sqs": "^1.3.1",
+    "serverless-offline": "^3.33.0",
+    "serverless-offline-sqs": "^1.6.1",
     "serverless-secrets-plugin": "^0.1.0",
-    "serverless-webpack": "^5.1.1",
-    "source-map-support": "^0.5.6",
+    "serverless-webpack": "^5.3.1",
+    "source-map-support": "^0.5.13",
     "ts-loader": "^4.2.0",
     "typescript": "^2.9.2",
-    "webpack": "^4.5.0"
+    "webpack": "^4.39.3"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
