--- a/serverless.yml
+++ b/serverless.yml
@@ -6,13 +6,14 @@ service:
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-nested-stack
 
 provider:
   name: aws
   runtime: nodejs10.x
   timeout: 10
   region: us-west-2
-  memorySize: 256
+  memorySize: 512
   environment: 
     CAPTCHA_SECRET: ${env:CAPTCHA_SECRET}
     MAILGUN_API_KEY: ${env:MAILGUN_API_KEY}
