--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.1",
+    "@serverless/typescript": "^2.23.0",
+    "@types/aws-lambda": "8.10.71",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/node": "^8.10.53",
+    "@types/node": "^14.14.25",
     "@types/request": "^2.48.2",
     "@types/uuid": "^3.4.5",
     "add-asset-webpack-plugin": "^0.1.0",
@@ -28,10 +29,10 @@
     "serverless-offline-sqs": "^1.6.1",
     "serverless-plugin-split-stacks": "^1.9.1",
     "serverless-secrets-plugin": "^0.1.0",
-    "serverless-webpack": "^5.3.1",
+    "serverless-webpack": "^5.5.4",
     "source-map-support": "^0.5.13",
     "ts-loader": "^4.2.0",
-    "typescript": "^2.9.2",
+    "typescript": "^4.1.3",
     "webpack": "^4.39.3"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
