--- a/serverless.yml
+++ b/serverless.yml
@@ -1,16 +1,16 @@
 org: kylec32
-app: wishlistsharer
+# app: wishlistsharer
 service:
   name: wishListSharer
 
 plugins:
   - serverless-webpack
-  - serverless-offline
+  # - serverless-offline
   - serverless-plugin-split-stacks
 
 provider:
   name: aws
-  runtime: nodejs10.x
+  runtime: nodejs14.x
   timeout: 10
   region: us-west-2
   memorySize: 512
@@ -67,12 +67,11 @@ functions:
       - sns:
           arn:
             Fn::Join:
-              - ""
-              - - "arn:aws:sns:"
+              - ":"
+              - - "arn:aws:sns"
                 - Ref: "AWS::Region"
-                - ":"
                 - Ref: "AWS::AccountId"
-                - ":eventsTopic"
+                - "eventsTopic"
           topicName: eventsTopic
   signUp:
     handler: handlers/user-management.signUp
